# ECS

./: .bettercodehub.yml  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.circleci/: config.yml
ECS/src/: ECS.cpp  ECS.hpp  Platform.hpp
ECS/src/Component/: Component.cpp  Component.hpp  ComponentContainer.cpp  ComponentContainer.hpp  ComponentManager.cpp  ComponentManager.hpp  IComponent.cpp  IComponent.hpp  IComponentContainer.hpp
ECS/src/Entity/: Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  EntityManager.cpp  EntityManager.hpp  IEntity.cpp  IEntity.hpp  IEntityContainer.cpp  IEntityContainer.hpp
ECS/src/System/: ISystem.cpp  ISystem.hpp  MediumSystemManager.cpp  MediumSystemManager.hpp  SimpleSystemManager.cpp  SimpleSystemManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
ECS/src/util/: NonOwningPointer.cpp  NonOwningPointer.hpp  util.hpp
test/src/: main.cpp
tests/: CMakeLists.txt  catch.hpp  main.cpp
